fixes for backstretch

--- a/app/assets/stylesheets/style/style-mobile.scss
+++ b/app/assets/stylesheets/style/style-mobile.scss
@@ -106,6 +106,7 @@
 	#header {
 		height: 2.5em;
 		line-height: 2.5em;
+		position: absolute;
 	}
 
 	body {
